--- a/arch/arm64/configs/oneplus3_defconfig
+++ b/arch/arm64/configs/oneplus3_defconfig
@@ -1,4 +1,4 @@
-CONFIG_LOCALVERSION="-Intoxicated_op3"
+CONFIG_LOCALVERSION="-Next-OS"
 # CONFIG_SWAP is not set
 CONFIG_AUDIT=y
 # CONFIG_AUDITSYSCALL is not set
